--- a/index.html
+++ b/index.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 
-<html>
-
-<head>
-</head>
+<html lang="en">
+  <head>
+    <title>WDD230 Homepage ~ Ryan Brower ~ Winter 2022</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content= "Assignment portal for Ryan Brower in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
+    <link rel="stylesheet" href="/css/index.css" />
+  </head> 
 
 <body>
-    <h1>Hello World!</h1>
+  <header>
+    <img id="ryan-suit" src="/images/ryan_suit.png" alt="A Picture of Ryan in a suit." />
+    <h1 id="ryan-name">Ryan J. Brower</h1>
+  </header>
+
+  <main>
+    <h2>WDD230: Assignment Portal</h2>
+    <hr />
+    <section id="lesson-list">
+      <ul>
+        <li>
+          <p>Lesson 02: <a href="">Title</a></p>
+        </li>
+        <li>
+          <p>Lesson 03: <a href="">Title</a></p>
+        </li>
+        <li>
+          <p>Lesson 04: <a href="">Title</a></p>
+        </li>
+        <li>
+          <p>Lesson 05: <a href="">Title</a></p>
+        </li>
+        <li>
+          <p>Lesson 06: <a href="">Title</a></p>
+        </li>
+        <li>
+          <p>Lesson 07: <a href="">Title</a></p>
+        </li>
+        <li>
+          <p>Lesson 08: <a href="">Title</a></p>
+        </li>
+        <li>
+          <p>Lesson 09: <a href="">Title</a></p>
+        </li>
+        <li>
+          <p>Lesson 10: <a href="">Title</a></p>
+        </li>
+        <li>
+          <p>Lesson 11: <a href="">Title</a></p>
+        </li>
+      </ul>
+    </section>
+    <hr />
+    <p id="warning"><em>Some lessons may need more than one activity/assignment link.</em></p>
+  </main>
+
+  <footer>
+    <p id="copyright">&copy; <span id="year"></span> .:|:. Ryan J. Brower .:|:. Washington</p>
+    <p id="updated">Last Updated: <span id="last-modified"></span></p>
+  </footer>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
