adjusted css and error page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content= "Assignment portal for Ryan Brower in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
     <link rel="stylesheet" href="/css/index.css" />
-  </head> 
+  </head>
 
 <body>
   <header>
@@ -18,40 +18,38 @@
   <main>
     <h2>WDD230: Assignment Portal</h2>
     <hr />
-    <section id="lesson-list">
-      <ul>
-        <li>
-          <p>Lesson 02: <a href="">Title</a></p>
-        </li>
-        <li>
-          <p>Lesson 03: <a href="">Title</a></p>
-        </li>
-        <li>
-          <p>Lesson 04: <a href="">Title</a></p>
-        </li>
-        <li>
-          <p>Lesson 05: <a href="">Title</a></p>
-        </li>
-        <li>
-          <p>Lesson 06: <a href="">Title</a></p>
-        </li>
-        <li>
-          <p>Lesson 07: <a href="">Title</a></p>
-        </li>
-        <li>
-          <p>Lesson 08: <a href="">Title</a></p>
-        </li>
-        <li>
-          <p>Lesson 09: <a href="">Title</a></p>
-        </li>
-        <li>
-          <p>Lesson 10: <a href="">Title</a></p>
-        </li>
-        <li>
-          <p>Lesson 11: <a href="">Title</a></p>
-        </li>
-      </ul>
-    </section>
+    <ul id="lesson-list">
+      <li>
+        <p>Lesson 02: <a href="/error.html">Title</a></p>
+      </li>
+      <li>
+        <p>Lesson 03: <a href="/error.html">Title</a></p>
+      </li>
+      <li>
+        <p>Lesson 04: <a href="/error.html">Title</a></p>
+      </li>
+      <li>
+        <p>Lesson 05: <a href="/error.html">Title</a></p>
+      </li>
+      <li>
+        <p>Lesson 06: <a href="/error.html">Title</a></p>
+      </li>
+      <li>
+        <p>Lesson 07: <a href="/error.html">Title</a></p>
+      </li>
+      <li>
+        <p>Lesson 08: <a href="/error.html">Title</a></p>
+      </li>
+      <li>
+        <p>Lesson 09: <a href="/error.html">Title</a></p>
+      </li>
+      <li>
+        <p>Lesson 10: <a href="/error.html">Title</a></p>
+      </li>
+      <li>
+        <p>Lesson 11: <a href="/error.html">Title</a></p>
+      </li>
+    </ul>
     <hr />
     <p id="warning"><em>Some lessons may need more than one activity/assignment link.</em></p>
   </main>
