--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content= "Assignment portal for Ryan Brower in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
   </head>
 
 <body>
   <header>
-    <img id="ryan-suit" src="/images/ryan_suit.png" alt="A Picture of Ryan in a suit." />
+    <img id="ryan-suit" src="images/ryan_suit.png" alt="A Picture of Ryan in a suit." />
     <h1 id="ryan-name">Ryan J. Brower</h1>
   </header>
 
@@ -20,34 +20,34 @@
     <hr />
     <ul id="lesson-list">
       <li>
-        <p>Lesson 02: <a href="/error.html">Title</a></p>
+        <p>Lesson 02: <a href="error.html">Title</a></p>
       </li>
       <li>
-        <p>Lesson 03: <a href="/error.html">Title</a></p>
+        <p>Lesson 03: <a href="error.html">Title</a></p>
       </li>
       <li>
-        <p>Lesson 04: <a href="/error.html">Title</a></p>
+        <p>Lesson 04: <a href="error.html">Title</a></p>
       </li>
       <li>
-        <p>Lesson 05: <a href="/error.html">Title</a></p>
+        <p>Lesson 05: <a href="error.html">Title</a></p>
       </li>
       <li>
-        <p>Lesson 06: <a href="/error.html">Title</a></p>
+        <p>Lesson 06: <a href="error.html">Title</a></p>
       </li>
       <li>
-        <p>Lesson 07: <a href="/error.html">Title</a></p>
+        <p>Lesson 07: <a href="error.html">Title</a></p>
       </li>
       <li>
-        <p>Lesson 08: <a href="/error.html">Title</a></p>
+        <p>Lesson 08: <a href="error.html">Title</a></p>
       </li>
       <li>
-        <p>Lesson 09: <a href="/error.html">Title</a></p>
+        <p>Lesson 09: <a href="error.html">Title</a></p>
       </li>
       <li>
-        <p>Lesson 10: <a href="/error.html">Title</a></p>
+        <p>Lesson 10: <a href="error.html">Title</a></p>
       </li>
       <li>
-        <p>Lesson 11: <a href="/error.html">Title</a></p>
+        <p>Lesson 11: <a href="error.html">Title</a></p>
       </li>
     </ul>
     <hr />
@@ -58,7 +58,7 @@
     <p id="copyright">&copy; <span id="year"></span> .:|:. Ryan J. Brower .:|:. Washington</p>
     <p id="updated">Last Updated: <span id="last-modified"></span></p>
   </footer>
-  <script src="/js/index.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
