error link bug fix

--- a/error.html
+++ b/error.html
@@ -5,7 +5,7 @@
     <title>Error: AssignmentNotDone Error</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="css/index.css" />
   </head>
 
 <body>
@@ -13,7 +13,7 @@
     <h1>Error: This page has not been made yet!</h1>
     <p>Please return at a later date. Thank you for your patience!
     <hr />
-    <a href="/index.html">Return Home</a>
+    <a href="index.html">Return Home</a>
 
 </body>
 
