small/medium screen media quiery

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content= "Assignment portal for Ryan Brower in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/small.css" />
+    <link rel="stylesheet" type="text/css" href="css/medium.css" />
   </head>
 
 <body>
