--- a/error.html
+++ b/error.html
@@ -5,7 +5,8 @@
     <title>Error: AssignmentNotDone Error</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/small.css" />
   </head>
 
 <body>
