--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <hr />
     <ul id="lesson-list">
       <li>
-        <p>Lesson 02: <a href="error.html">Title</a></p>
+        <p>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></p>
       </li>
       <li>
         <p>Lesson 03: <a href="error.html">Title</a></p>
