--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></p>
       </li>
       <li>
-        <p>Lesson 03: <a href="error.html">Title</a></p>
+        <p>Lesson 03: <a href="lesson3/index.html">Chamber site plan</a></p>
       </li>
       <li>
         <p>Lesson 04: <a href="error.html">Title</a></p>
