--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       <li>
         <p>Lesson 11: <a href="error.html">Title</a></p>
       </li>
+      <li>
+        <p>Student Presentation: <a href="presentation/dom.html">DOM</a></p>
+      </li>
     </ul>
     <hr />
     <p id="warning"><em>Some lessons may need more than one activity/assignment link.</em></p>
