--- a/presentation/dom.html
+++ b/presentation/dom.html
@@ -5,7 +5,7 @@
     <title>DOM Student Presentation</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content= "A beginner's explanation of the Document Object Model for the class WDD230 - Frontend " />
+    <meta name="description" content= "A beginner's explanation of the Document Object Model for the class WDD230 - Web Frontend Development" />
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" type="text/css" href="../css/small.css" />
     <link rel="stylesheet" type="text/css" href="../css/medium.css" />
