embedded powerpoint slides

--- a/presentation/dom.html
+++ b/presentation/dom.html
@@ -16,8 +16,12 @@
   <h2>Document Object Model (DOM)</h2>
   <p>Ryan Brower</p>
 
-  <iframe src="https://www.youtube.com/embed/IaiyrM4DmsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe id="video" src="https://www.youtube.com/embed/IaiyrM4DmsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <hr />
   
+  <h4>Here are the powerpoint slides for your own reference.</h4>
+  <iframe id="slides" src="https://docs.google.com/presentation/d/1WGoduvf92CHziuyGDS8Kn6PG5MBenAhn5HUbxw1ti3s/embed"></iframe>
+
   <hr />
   <a href="../index.html">Return Home</a>
 </body>
@@ -26,7 +30,14 @@
 
   iframe {
     width: 100%;
+  }
+
+  #video {
     height: 255px;
+  }
+
+  #slides {
+    height: 295px;
   }
 
 </style>
