--- a/index.html
+++ b/index.html
@@ -21,39 +21,17 @@
     <h2>WDD230: Assignment Portal</h2>
     <hr />
     <ul id="lesson-list">
-      <li>
-        <p>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></p>
-      </li>
-      <li>
-        <p>Lesson 03: <a href="lesson3/index.html">Chamber site plan</a></p>
-      </li>
-      <li>
-        <p>Lesson 04: <a href="error.html">Title</a></p>
-      </li>
-      <li>
-        <p>Lesson 05: <a href="error.html">Title</a></p>
-      </li>
-      <li>
-        <p>Lesson 06: <a href="error.html">Title</a></p>
-      </li>
-      <li>
-        <p>Lesson 07: <a href="error.html">Title</a></p>
-      </li>
-      <li>
-        <p>Lesson 08: <a href="error.html">Title</a></p>
-      </li>
-      <li>
-        <p>Lesson 09: <a href="error.html">Title</a></p>
-      </li>
-      <li>
-        <p>Lesson 10: <a href="error.html">Title</a></p>
-      </li>
-      <li>
-        <p>Lesson 11: <a href="error.html">Title</a></p>
-      </li>
-      <li>
-        <p>Student Presentation: <a href="presentation/dom.html">DOM</a></p>
-      </li>
+      <li><p>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></p></li>
+      <li><p>Lesson 03: <a href="lesson3/index.html">Chamber site plan</a></p></li>
+      <li><p>Lesson 04: <a href="chamber/index.html">Chamber Site Draft 1</a></p></li>
+      <li><p>Lesson 05: <a href="error.html">Title</a></p></li>
+      <li><p>Lesson 06: <a href="error.html">Title</a></p></li>
+      <li><p>Lesson 07: <a href="error.html">Title</a></p></li>
+      <li><p>Lesson 08: <a href="error.html">Title</a></p></li>
+      <li><p>Lesson 09: <a href="error.html">Title</a></p></li>
+      <li><p>Lesson 10: <a href="error.html">Title</a></p></li>
+      <li><p>Lesson 11: <a href="error.html">Title</a></p></li>
+      <li><p>Student Presentation: <a href="presentation/dom.html">DOM</a></p></li>
     </ul>
     <hr />
     <p id="warning"><em>Some lessons may need more than one activity/assignment link.</em></p>
