--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content= "Homepage for the Smokey Point Chamber of Commerce, and home to all links and vital information pertaining to the organization." />
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/medium.css" />
     <link rel="stylesheet" type="text/css" href="css/large.css" />
