first part of home layout

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,26 +47,38 @@
 
   <main>
     <section id="banner">
-      <p>an img overlooking arlington, headed with "Smokey Point Chamber of Commerce"</p>
+      <h1>Welcome to Smokey Point</h1>
+      <button class="join" id="join">Join Now!</button>
     </section>
 
     <section id="call-action">
-      <p>a call to action</p>
+      <h2>a call to action</h2>
     </section>
 
     <section id="showcase">
-      <p>a showcase of local businesses</p>
-      <div id="bus1"></div>
-      <div id="bus2"></div>
-      <div id="bus3"></div>
+      <h3>Meet some local businesses!</h3>
+      <div id="bus1">
+        <h4>Blue Bird Cafe</h4>
+        <p>A local american diner, family owned and operated since 1958.</p>
+        <p>Located on Olympic Ave.</p>
+        <a class="more" href="#">See More...</a>
+      </div>
+      <div id="bus2">
+        <h4>Ellie's at the Airport</h4>
+        <p></p>
+      </div>
+      <div id="bus3">
+        <h4>Country Burger</h4>
+        <p></p>
+      </div>
     </section>
     
     <section id="join-now">
-      <p>an invitation to join the chamber</p>
+      <button class="join" id="join2">Join Us Now!</button>
     </section>
 
     <section id="events">
-      <p>showing some of our events</p>
+      <h3>showing some of our events</h3>
       <div id="event1"></div>
       <div id="event2"></div>
       <div id="event3"></div>
@@ -76,7 +88,7 @@
     </section>
 
     <section id="weather">
-      <p>the weather</p>
+      <h3>the weather</h3>
     </section>
   </main>
 
