--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <ul id="lesson-list">
       <li><p>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></p></li>
       <li><p>Lesson 03: <a href="lesson3/index.html">Chamber site plan</a></p></li>
-      <li><p>Lesson 04: <a href="chamber/index.html">Chamber Site Draft 1</a></p></li>
-      <li><p>Lesson 05: <a href="error.html">Title</a></p></li>
+      <li><p>Lesson 04: <a href="start-navigation/index.html">Navigation exercise</a></p></li>
+      <li><p>Lesson 05: <a href="BOM/bom.html">BOM Practice</a></p></li>
       <li><p>Lesson 06: <a href="error.html">Title</a></p></li>
       <li><p>Lesson 07: <a href="error.html">Title</a></p></li>
       <li><p>Lesson 08: <a href="error.html">Title</a></p></li>
       <li><p>Lesson 09: <a href="error.html">Title</a></p></li>
       <li><p>Lesson 10: <a href="error.html">Title</a></p></li>
-      <li><p>Lesson 11: <a href="error.html">Title</a></p></li>
+      <li><p>Lesson 11: <a href="chamber/index.html">Chamber Site Full</a></p></li>
       <li><p>Student Presentation: <a href="presentation/dom.html">DOM</a></p></li>
     </ul>
     <hr />
