Updated BOM Assignment

--- a/BOM/bom.html
+++ b/BOM/bom.html
@@ -1,12 +1,17 @@
-<h1>📘 Book of Mormon</h1>
+<!DOCTYPE html>
+
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
+	<title>Favorite BOM Chapters</title>
+    <meta name="description" content= "Place to store your favorite chapters from the Book of Mormon" />
+	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="bom.css">
 </head>
 
 <main>
+	<h1>📘 Book of Mormon</h1>
 	<div class="input">
 		<label>Enter Book and Chapter<br>
 			<input type="text" id="favchap" placeholder="Alma 5" required></label>
@@ -19,3 +24,5 @@
 
     <script src="bom.js"></script>
 </main>
+
+</html>
