--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,8 +23,8 @@
           <li class="large"><a href="#">Events</a></li>
           <li class="large"><a href="#">Contact Us</a></li>
           <li class="large">
-            <a href="facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
-            <a href="instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
+            <a href="https://www.facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
+            <a href="https://www.instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
           </li>
           <li class="large" id="date"></li>
         </ul>
@@ -36,8 +36,8 @@
         <li><a href="#">Events</a></li>
         <li><a href="#">Contact Us</a></li>
         <li>
-          <a href="facebook.com" class="social"><img src="images/facebook.png" /></a>
-          <a href="instagram.com" class="social"><img src="images/instagram.png" /></a>
+          <a href="https://www.facebook.com" class="social"><img src="images/facebook.png" alt="the link to facebook" /></a>
+          <a href="https://www.instagram.com" class="social"><img src="images/instagram.png" alt="the link to instagram" /></a>
         </li>
       </ul>
       <p id="date2" class="hidden"></p>
@@ -52,11 +52,11 @@
     </section>
 
     <section id="call-action">
-    <picture>
-      <source srcset="./images/wdd230-org-600w.jpeg" media="(min-width: 500px) and (max-width: 799px)" >
-      <source srcset="./images/wdd230-org-800w.jpeg" media="(min-width: 800px)" >
-      <img src="./images/wdd230-org-400w.jpg" alt="people working at a table" />
-    </picture>
+      <picture>
+        <source srcset="./images/wdd230-org-600w.jpeg" media="(min-width: 500px) and (max-width: 799px)" >
+        <source srcset="./images/wdd230-org-800w.jpeg" media="(min-width: 800px)" >
+        <img src="./images/wdd230-org-400w.jpg" alt="people working at a table" />
+      </picture>
       <!-- <img srcset="./images/wdd230-org-400w.jpeg,
                     ./images/wdd230-org-600w.jpeg,
                     ./images/wdd230-org-800w.jpeg"
