--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <ul id="lesson-list">
       <li><p>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></p></li>
       <li><p>Lesson 03: <a href="lesson3/index.html">Chamber site plan</a></p></li>
-      <li><p>Lesson 04: <a href="start-navigation/index.html">Navigation exercise</a></p></li>
-      <li><p>Lesson 05: <a href="BOM/bom.html">BOM Practice</a></p></li>
+      <li><p>Lesson 04: <a href="lesson4/index.html">Navigation exercise</a></p></li>
+      <li><p>Lesson 05: <a href="lesson5/bom.html">BOM Practice</a></p></li>
       <li><p>Lesson 06: <a href="error.html">Title</a></p></li>
-      <li><p>Lesson 07: <a href="error.html">Title</a></p></li>
+      <li><p>Lesson 07: <a href="lesson7/lazyload.html">Lazyload exercise</a></p></li>
       <li><p>Lesson 08: <a href="error.html">Title</a></p></li>
       <li><p>Lesson 09: <a href="error.html">Title</a></p></li>
       <li><p>Lesson 10: <a href="error.html">Title</a></p></li>
