--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,41 +47,33 @@
 
   <main>
     <section id="banner">
-      <h1>Welcome to Smokey Point</h1>
+      <h1 id="main-heading">Welcome to Smokey Point</h1>
       <button class="join" id="join">Join Now!</button>
     </section>
 
-    <section id="call-action">
-      <picture>
-        <source srcset="./images/wdd230-org-600w.jpeg" media="(min-width: 500px) and (max-width: 799px)" >
-        <source srcset="./images/wdd230-org-800w.jpeg" media="(min-width: 800px)" >
-        <img src="./images/wdd230-org-400w.jpg" alt="people working at a table" />
-      </picture>
-      <!-- <img srcset="./images/wdd230-org-400w.jpeg,
-                    ./images/wdd230-org-600w.jpeg,
-                    ./images/wdd230-org-800w.jpeg"
-            sizes="(max-width: 400px) 400px,
-                    (max-width: 600px) 600px,
-                    800px"
-            src="./images/wdd230-org-800w.jpeg"
-            alt="people working at a table" /> -->
+    <section id="news">
+      <h2>-- News --</h2>
+      <h4 class="heading">test</h4>
+      <p>testing testing testing testing testing testing testing testing testing testing testing testing </p>
+      <h4 class="heading">Grand Opening of <em>Tims's</em> Restaurant</h4>
+      <p>Our community's own Tim Mcdonald is opening his own restaurant. Stop by to show your support!</p>
     </section>
 
     <section id="showcase">
-      <h3>Find Some Local Businesses!</h3>
+      <h3>Meet Local Businesses!</h3>
       <div id="bus1">
-        <h4>Blue Bird Cafe</h4>
+        <h4 class="heading">Blue Bird Cafe</h4>
         <p>A local american diner, family owned since 1958.</p>
         <p>Located on Olympic Ave.</p>
         <a class="more" href="#">See More...</a>
       </div>
       <div id="bus2">
-        <h4>Ellie's at the Airport</h4>
+        <h4 class="heading">Ellie's at the Airport</h4>
         <p>Family Style Restaurant with a view of the runway.</p>
         <p>East of the Arlington Airport.</p>
       </div>
       <div id="bus3">
-        <h4>Country Burger</h4>
+        <h4 class="heading">Country Burger</h4>
         <p>Gourmet burgers and shakes with a local feel.</p>
         <p>Off of Lakewood Road.</p>
       </div>
@@ -138,7 +130,7 @@
       </div>
 
       <div class="data">
-        <p id="w_speed"></p>
+        <p><span id="w_speed"></span> mph</p>
         <p id="w_chill"></p>
       </div>
     </section>
@@ -164,7 +156,8 @@
     </div>
   </footer>
 
-  <script src="js/script.js"></script>
+  <script src="js/dates.js"></script>
+  <script src="js/hamburger.js"></script>
   <script src="js/windchill.js"></script>
 </body>
 
