--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,8 +20,8 @@
         <ul id="main-nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="#">Join Now!</a></li>
-          <li class="large"><a href="#">Events</a></li>
-          <li class="large"><a href="#">Contact Us</a></li>
+          <li class="large"><a href="discover.html">Discover</a></li>
+          <li class="large"><a href="#">Directory</a></li>
           <li class="large">
             <a href="https://www.facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
             <a href="https://www.instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
@@ -33,11 +33,11 @@
     </div>
     <nav id="lower" class="hidden">
       <ul id="lower-nav" class="hidden">
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="discover.html">Discover</a></li>
+        <li><a href="#">Directory</a></li>
         <li>
-          <a href="https://www.facebook.com" class="social"><img src="images/facebook.png" alt="the link to facebook" /></a>
-          <a href="https://www.instagram.com" class="social"><img src="images/instagram.png" alt="the link to instagram" /></a>
+          <a href="https://www.facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
+          <a href="https://www.instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
         </li>
       </ul>
       <p id="date2" class="hidden"></p>
@@ -45,7 +45,7 @@
     </nav>
   </header>
 
-  <main>
+  <main id="index">
     <section id="banner">
       <h1 id="main-heading">Welcome to Smokey Point</h1>
       <button class="join" id="join">Join Now!</button>
@@ -157,6 +157,7 @@
   </footer>
 
   <script src="js/dates.js"></script>
+  <script src="js/events.js"></script>
   <script src="js/hamburger.js"></script>
   <script src="js/windchill.js"></script>
 </body>
