--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <li><p>Lesson 05: <a href="lesson5/bom.html">BOM Practice</a></p></li>
       <li><p>Lesson 06: <a href="error.html">Title</a></p></li>
       <li><p>Lesson 07: <a href="lesson7/lazyload.html">Lazyload exercise</a></p></li>
-      <li><p>Lesson 08: <a href="lesson8/tablebuild.html">Table Demo</a></p></li>
+      <li><p>Lesson 08: <a href="lesson8/tablebuild.html">Table Demo</a> - <a href="Form-start/index.html">Form Demo</a></p></li>
       <li><p>Lesson 09: <a href="error.html">Title</a></p></li>
       <li><p>Lesson 10: <a href="error.html">Title</a></p></li>
       <li><p>Lesson 11: <a href="chamber/index.html">Chamber Site Full</a></p></li>
