--- a/lesson8/tablebuild2.html
+++ b/lesson8/tablebuild2.html
@@ -26,39 +26,39 @@
 
     <tbody>
       <tr>
-        <td scope="row">August</td>
-        <td scope="row">$3,590</td>
-        <td scope="row">$4,000</td>
+        <td>August</td>
+        <td>$3,590</td>
+        <td>$4,000</td>
       </tr>
       <tr>
-        <td scope="row">September</td>
-        <td scope="row">$4,420</td>
-        <td scope="row">$5,000</td>
+        <td>September</td>
+        <td>$4,420</td>
+        <td>$5,000</td>
       </tr>
       <tr>
-        <td scope="row">October</td>
-        <td scope="row">$4,870</td>
-        <td scope="row">$5,000</td>
+        <td>October</td>
+        <td>$4,870</td>
+        <td>$5,000</td>
       </tr>
       <tr>
-        <td scope="row">November</td>
-        <td scope="row">$8,610</td>
-        <td scope="row" class="emphasis">$7,500</td>
+        <td>November</td>
+        <td>$8,610</td>
+        <td class="emphasis">$7,500</td>
       </tr>
       <tr>
-        <td scope="row"><em>Black Friday</em></td>
-        <td scope="row" colspan="2">$3,200</td>
+        <td><em>Black Friday</em></td>
+        <td colspan="2">$3,200</td>
       </tr>
       <tr>
-        <td scope="row">December</td>
-        <td scope="row">$6,820</td>
-        <td scope="row">$7,500</td>
+        <td>December</td>
+        <td>$6,820</td>
+        <td>$7,500</td>
       </tr>
     </tbody>
 
     <tfoot>
       <tr>
-        <td scope="col" colspan="3" class="caption">Compiled 2.25.22 by rBrower</td>
+        <td colspan="3" class="caption">Compiled 2.25.22 by rBrower</td>
       </tr>
     </tfoot>
   </table>
