--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -19,7 +19,7 @@
       <nav>
         <ul id="main-nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Join Now!</a></li>
+          <li><a href="join.html">Join Now!</a></li>
           <li class="large"><a href="discover.html">Discover</a></li>
           <li class="large"><a href="#">Directory</a></li>
           <li class="large">
