--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
       <nav>
         <ul id="main-nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Join Now!</a></li>
+          <li><a href="join.html">Join Now!</a></li>
           <li class="large"><a href="discover.html">Discover</a></li>
           <li class="large"><a href="#">Directory</a></li>
           <li class="large">
@@ -48,7 +48,7 @@
   <main id="index">
     <section id="banner">
       <h1 id="main-heading">Welcome to Smokey Point</h1>
-      <button class="join" id="join">Join Now!</button>
+      <button class="join" id="join"><a href="join.html">Join Now!</a></button>
     </section>
 
     <section id="news">
@@ -110,7 +110,7 @@
     </section>
     
     <section id="join-now">
-      <button class="join" id="join2">Join Us Now!</button>
+      <button class="join" id="join2"><a href="join.html">Join Us Now!</a></button>
     </section>
 
     <section id="weather">
