hidden elem on form

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -179,9 +179,9 @@
         <label class="sbs"><input type="radio" name="audience" value="gold"> Gold Membership</label>
 
         <label class="top" id="paragraph">Description of Business <input type="textarea" name="description"></label>
-        <label class="top"><input type="hidden" name="datetime"></label>
+        <label><input type="hidden" name="datetime" id="hid"></label>
       </fieldset>
-      <input type="submit" value="Join the Chamber" class="submitBtn">
+      <input type="submit" value="Join the Chamber" class="submitBtn" id="submit">
     </form>
   </main>
 
@@ -207,6 +207,7 @@
 
   <script src="js/dates.js"></script>
   <script src="js/hamburger.js"></script>
+  <script src="js/form.js"></script>
 </body>
 
 </html>
