--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -45,95 +45,18 @@
     </nav>
   </header>
 
-  <main id="index">
-    <section id="banner">
-      <h1 id="main-heading">Welcome to Smokey Point</h1>
-      <button class="join" id="join"><a href="join.html">Join Now!</a></button>
-    </section>
+  <main>
 
-    <section id="news">
-      <h2>-- News --</h2>
-      <h4 class="heading">test</h4>
-      <p>testing testing testing testing testing testing testing testing testing testing testing testing </p>
-      <h4 class="heading">Grand Opening of <em>Tims's</em> Restaurant</h4>
-      <p>Our community's own Tim Mcdonald is opening his own restaurant. Stop by to show your support!</p>
-    </section>
 
-    <section id="showcase">
-      <h3>Meet Local Businesses!</h3>
-      <div id="bus1">
-        <h4 class="heading">Blue Bird Cafe</h4>
-        <p>A local american diner, family owned since 1958.</p>
-        <p>Located on Olympic Ave.</p>
-        <a class="more" href="#">See More...</a>
-      </div>
-      <div id="bus2">
-        <h4 class="heading">Ellie's at the Airport</h4>
-        <p>Family Style Restaurant with a view of the runway.</p>
-        <p>East of the Arlington Airport.</p>
-      </div>
-      <div id="bus3">
-        <h4 class="heading">Country Burger</h4>
-        <p>Gourmet burgers and shakes with a local feel.</p>
-        <p>Off of Lakewood Road.</p>
-      </div>
-    </section>
 
-    <section id="events">
-      <h3>See What's Happening!</h3>
 
-      <div id="event1">
-        <h6 id="eventdate1"></h6>
-        <p>Chamber Meeting - 7pm</p>
-      </div>
-      <div id="event2">
-        <h6 id="eventdate2"></h6>
-        <p>Open House - 6pm</p>
-      </div>
-      <div id="event3">
-        <h6 id="eventdate3"></h6>
-        <p>Chamber Meeting - 7pm</p>
-      </div>
-      <div id="event4">
-        <h6 id="eventdate4"></h6>
-        <p>Business Lunch - 11am</p>
-      </div>
-      <div id="event5">
-        <h6 id="eventdate5"></h6>
-        <p><em>Tim's</em> Grand Opening</p>
-      </div>
-      <div id="event6">
-        <h6 id="eventdate6"></h6>
-        <p>Chamber Meeting - 7pm</p>
-      </div>
 
-    </section>
-    
-    <section id="join-now">
-      <button class="join" id="join2"><a href="join.html">Join Us Now!</a></button>
-    </section>
 
-    <section id="weather">
-      <h2>It Is Currently...</h2>
-      <img id="w_img" src="./images/icons/cloudy.webp" alt="an icon indicating a cloudy day" />
 
-      <div class="temp">
-        <span id="temp"></span>
-        <span id="temp_label">°F</span>
-      </div>
 
-      <h4 id="conditions"></h4>
 
-      <div class="label">
-        <p>Wind Speed:</p>
-        <p>Wind Chill:</p>
-      </div>
 
-      <div class="data">
-        <p><span id="w_speed"></span> mph</p>
-        <p id="w_chill"></p>
-      </div>
-    </section>
+
   </main>
 
   <footer>
@@ -157,9 +80,7 @@
   </footer>
 
   <script src="js/dates.js"></script>
-  <script src="js/events.js"></script>
   <script src="js/hamburger.js"></script>
-  <script src="js/windchill.js"></script>
 </body>
 
 </html>
