--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -15,16 +15,16 @@
 <body>
   <header>
     <div id="nav-top">
-      <a href="index.html"><img id="logo" src="images/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" /></a>
+      <a href="index.html"><img id="logo" src="images/icons/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" /></a>
       <nav>
         <ul id="main-nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join Now!</a></li>
           <li class="large"><a href="discover.html">Discover</a></li>
-          <li class="large"><a href="#">Directory</a></li>
+          <li class="large"><a href="directory.html">Directory</a></li>
           <li class="large">
-            <a href="https://www.facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
-            <a href="https://www.instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
+            <a href="https://www.facebook.com" class="social"><img src="images/icons/facebook.webp" alt="the link to facebook" /></a>
+            <a href="https://www.instagram.com" class="social"><img src="images/icons/instagram.webp" alt="the link to instagram" /></a>
           </li>
           <li class="large" id="date"></li>
         </ul>
@@ -34,10 +34,10 @@
     <nav id="lower" class="hidden">
       <ul id="lower-nav" class="hidden">
         <li><a href="discover.html">Discover</a></li>
-        <li><a href="#">Directory</a></li>
+        <li><a href="directory.html">Directory</a></li>
         <li>
-          <a href="https://www.facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
-          <a href="https://www.instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
+          <a href="https://www.facebook.com" class="social"><img src="images/icons/facebook.webp" alt="the link to facebook" /></a>
+          <a href="https://www.instagram.com" class="social"><img src="images/icons/instagram.webp" alt="the link to instagram" /></a>
         </li>
       </ul>
       <p id="date2" class="hidden"></p>
@@ -52,9 +52,9 @@
       
       <div class="gallery">
         <picture>
-          <source media="(min-width:700px)" srcset="images/3fingers-1000w.png" />
-          <source media="(min-width:400px)" srcset="images/3fingers-700w.jpg" />
-          <img src="images/placeholder.png" data-src="images/3fingers-400w.jpg" alt="A photo of mount threefingers, a mountain that overlooks Smokey Point." />
+          <source media="(min-width:700px)" srcset="images/discover/3fingers-1000w.png" />
+          <source media="(min-width:400px)" srcset="images/discover/3fingers-700w.jpg" />
+          <img src="images/discover/placeholder.png" data-src="images/discover/3fingers-400w.jpg" alt="A photo of mount threefingers, a mountain that overlooks Smokey Point." />
         </picture>
         <div class="description">
           <h3>Mt. Threefingers</h3>
@@ -64,9 +64,9 @@
 
       <div class="gallery">
         <picture>
-          <source media="(min-width:800px)" srcset="images/kayakpoint-1600w.jpg" />
-          <source media="(min-width:400px)" srcset="images/kayakpoint-800w.png" />
-          <img src="images/placeholder.png" data-src="images/kayakpoint-400w.png" alt="Scenic view of the dock and some driftwood at kayak point, a popular beach near Smokey Point." />
+          <source media="(min-width:800px)" srcset="images/discover/kayakpoint-1600w.jpg" />
+          <source media="(min-width:400px)" srcset="images/discover/kayakpoint-800w.png" />
+          <img src="images/discover/placeholder.png" data-src="images/discover/kayakpoint-400w.png" alt="Scenic view of the dock and some driftwood at kayak point, a popular beach near Smokey Point." />
         </picture>
         <div class="description">
           <h3>Kayak Point</h3>
@@ -76,9 +76,9 @@
 
       <div class="gallery">
         <picture>
-          <source media="(min-width:600px)" srcset="images/airport-800w.png" />
-          <source media="(min-width:400px)" srcset="images/airport-600w.png" />
-          <img src="images/placeholder.png" data-src="images/airport-400w.png" alt="Local private airport just north of Smokey Point." />
+          <source media="(min-width:600px)" srcset="images/discover/airport-800w.png" />
+          <source media="(min-width:400px)" srcset="images/discover/airport-600w.png" />
+          <img src="images/discover/placeholder.png" data-src="images/discover/airport-400w.png" alt="Local private airport just north of Smokey Point." />
         </picture>
         <div class="description">
           <h3>Arlington Airport</h3>
@@ -88,9 +88,9 @@
 
       <div class="gallery">
         <picture>
-          <source media="(min-width:700px)" srcset="images/marysville-1000w.jpg" />
-          <source media="(min-width:400px)" srcset="images/marysville-700w.jpeg" />
-          <img src="images/placeholder.png" data-src="images/marysville-400w.jpeg" alt="A photo of the Marysville wetlands, found just south of Smokey Point." />
+          <source media="(min-width:700px)" srcset="images/discover/marysville-1000w.jpg" />
+          <source media="(min-width:400px)" srcset="images/discover/marysville-700w.jpeg" />
+          <img src="images/discover/placeholder.png" data-src="images/discover/marysville-400w.jpeg" alt="A photo of the Marysville wetlands, found just south of Smokey Point." />
         </picture>
         <div class="description">
           <h3>Marysville Wetlands</h3>
@@ -100,9 +100,9 @@
 
       <div class="gallery">
         <picture>
-          <source media="(min-width:700px)" srcset="images/lakewood-1000w.png" />
-          <source media="(min-width:400px)" srcset="images/lakewood-700w.png" />
-          <img src="images/placeholder.png" data-src="images/lakewood-400w.png" alt="A photo of the local high school." />
+          <source media="(min-width:700px)" srcset="images/discover/lakewood-1000w.png" />
+          <source media="(min-width:400px)" srcset="images/discover/lakewood-700w.png" />
+          <img src="images/discover/placeholder.png" data-src="images/discover/lakewood-400w.png" alt="A photo of the local high school." />
         </picture>
         <div class="description">
           <h3>Lakewood High School</h3>
@@ -112,9 +112,9 @@
 
       <div class="gallery">
         <picture>
-          <source media="(min-width:600px)" srcset="images/centennial_trail-800w.png" />
-          <source media="(min-width:400px)" srcset="images/centennial_trail-600w.png" />
-          <img src="images/placeholder.png" data-src="images/centennial_trail-400w.png" alt="An image of the centennial trail, which passes near Smokey Point." />
+          <source media="(min-width:600px)" srcset="images/discover/centennial_trail-800w.png" />
+          <source media="(min-width:400px)" srcset="images/discover/centennial_trail-600w.png" />
+          <img src="images/discover/placeholder.png" data-src="images/discover/centennial_trail-400w.png" alt="An image of the centennial trail, which passes near Smokey Point." />
         </picture>
         <div class="description">
           <h3>Centennial Trail</h3>
@@ -124,9 +124,9 @@
 
       <div class="gallery">
         <picture>
-          <source media="(min-width:700px)" srcset="images/stillaguamish_river-1000w.png" />
-          <source media="(min-width:400px)" srcset="images/stillaguamish_river-700w.png" />
-          <img src="images/placeholder.png" data-src="images/stillaguamish_river-400w.png" alt="A photo of the stillaguamish river, which snakes through the area." />
+          <source media="(min-width:700px)" srcset="images/discover/stillaguamish_river-1000w.png" />
+          <source media="(min-width:400px)" srcset="images/discover/stillaguamish_river-700w.png" />
+          <img src="images/discover/placeholder.png" data-src="images/discover/stillaguamish_river-400w.png" alt="A photo of the stillaguamish river, which snakes through the area." />
         </picture>
         <div class="description">
           <h3>Stillaguamish River</h3>
@@ -136,9 +136,9 @@
 
       <div class="gallery">
         <picture>
-          <source media="(min-width:700px)" srcset="images/silvana-1000w.png" />
-          <source media="(min-width:400px)" srcset="images/silvana-700w.png" />
-          <img src="images/placeholder.png" data-src="images/silvana-400w.png" alt="A photo of a street sign with the word 'Silvana', in front of an old barn and railroad tracks." />
+          <source media="(min-width:700px)" srcset="images/discover/silvana-1000w.png" />
+          <source media="(min-width:400px)" srcset="images/discover/silvana-700w.png" />
+          <img src="images/discover/placeholder.png" data-src="images/discover/silvana-400w.png" alt="A photo of a street sign with the word 'Silvana', in front of an old barn and railroad tracks." />
         </picture>
         <div class="description">
           <h3>Silvana</h3>
@@ -148,9 +148,9 @@
 
       <div class="gallery">
         <picture>
-          <source media="(min-width:700px)" srcset="images/lake_goodwin-1000w.png" />
-          <source media="(min-width:400px)" srcset="images/lake_goodwin-700w.png" />
-          <img src="images/placeholder.png" data-src="images/lake_goodwin-400w.png" alt="An image of a grassy field next to a dock on a large lake." />
+          <source media="(min-width:700px)" srcset="images/discover/lake_goodwin-1000w.png" />
+          <source media="(min-width:400px)" srcset="images/discover/lake_goodwin-700w.png" />
+          <img src="images/discover/placeholder.png" data-src="images/discover/lake_goodwin-400w.png" alt="An image of a grassy field next to a dock on a large lake." />
         </picture>
         <div class="description">
           <h3>Lake Goodwin</h3>
@@ -169,7 +169,7 @@
 
   <footer>
     <div id="main-footer">
-      <img id="logo-footer" src="images/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" />
+      <img id="logo-footer" src="images/icons/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" />
       <div id="first-footer">
         <h3>Smokey Point Chamber of Commerce</h3>
         <p>123 State Ave NW</p>
