--- a/chamber/join.html
+++ b/chamber/join.html
@@ -15,16 +15,16 @@
 <body>
   <header>
     <div id="nav-top">
-      <a href="index.html"><img id="logo" src="images/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" /></a>
+      <a href="index.html"><img id="logo" src="images/icons/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" /></a>
       <nav>
         <ul id="main-nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join Now!</a></li>
           <li class="large"><a href="discover.html">Discover</a></li>
-          <li class="large"><a href="#">Directory</a></li>
+          <li class="large"><a href="directory.html">Directory</a></li>
           <li class="large">
-            <a href="https://www.facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
-            <a href="https://www.instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
+            <a href="https://www.facebook.com" class="social"><img src="images/icons/facebook.webp" alt="the link to facebook" /></a>
+            <a href="https://www.instagram.com" class="social"><img src="images/icons/instagram.webp" alt="the link to instagram" /></a>
           </li>
           <li class="large" id="date"></li>
         </ul>
@@ -34,10 +34,10 @@
     <nav id="lower" class="hidden">
       <ul id="lower-nav" class="hidden">
         <li><a href="discover.html">Discover</a></li>
-        <li><a href="#">Directory</a></li>
+        <li><a href="directory.html">Directory</a></li>
         <li>
-          <a href="https://www.facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
-          <a href="https://www.instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
+          <a href="https://www.facebook.com" class="social"><img src="images/icons/facebook.webp" alt="the link to facebook" /></a>
+          <a href="https://www.instagram.com" class="social"><img src="images/icons/instagram.webp" alt="the link to instagram" /></a>
         </li>
       </ul>
       <p id="date2" class="hidden"></p>
@@ -187,7 +187,7 @@
 
   <footer>
     <div id="main-footer">
-      <img id="logo-footer" src="images/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" />
+      <img id="logo-footer" src="images/icons/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" />
       <div id="first-footer">
         <h3>Smokey Point Chamber of Commerce</h3>
         <p>123 State Ave NW</p>
