--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -21,7 +21,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join Now!</a></li>
           <li class="large"><a href="discover.html">Discover</a></li>
-          <li class="large"><a href="#">Directory</a></li>
+          <li class="large"><a href="directory.html">Directory</a></li>
           <li class="large">
             <a href="https://www.facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
             <a href="https://www.instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
@@ -34,7 +34,7 @@
     <nav id="lower" class="hidden">
       <ul id="lower-nav" class="hidden">
         <li><a href="discover.html">Discover</a></li>
-        <li><a href="#">Directory</a></li>
+        <li><a href="directory.html">Directory</a></li>
         <li>
           <a href="https://www.facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
           <a href="https://www.instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
